// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays failure if the resource is not found 1`] = `
<div
  id="composition-number"
>
  <WithStyles(Typography)>
    current composition: 
    failed
  </WithStyles(Typography)>
</div>
`;

exports[`displays the composition number 1`] = `
<div
  id="composition-number"
>
  <WithStyles(Typography)>
    current composition: 
    1
  </WithStyles(Typography)>
</div>
`;
